compiler/tests/fixtures/negative/error_sema_bang.sol
// E1012: cannot apply `!` to a non-int/float/bool type.
function start() -> str {
    return !"hello";
}
